// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should UserBlock render correctly With authorized user 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="User avatar"
        height="63"
        src="https://assets.htmlacademy.ru/intensives/javascript-3/avatar/9.jpg"
        width="63"
      />
    </a>
  </div>
</div>
`;

exports[`Should UserBlock render correctly With guest 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
